<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bk">

    <ImageView
        android:id="@+id/imageViewSettings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_settings" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_centerInParent="true">
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/kaushan_script"
          android:gravity="center"
          android:text="@string/app_name"
          android:textColor="@color/white"
          android:textSize="40sp"
          android:textStyle="bold" />
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/kaushan_script"
          android:gravity="center"
          android:text="@string/app_subtitle"
          android:textColor="#293462"
          android:textSize="20sp"
          android:textStyle="bold" />
  </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ly_home_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp"
        android:orientation="vertical">


        <Button
            android:id="@+id/relatve_layout_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:background="@drawable/background_circle_edit"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/editor"
            android:textColor="@color/white"
            android:textSize="15sp"

            />

        <Button
            android:id="@+id/relatve_layout_collage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:background="@drawable/background_circle_edit"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/collage"
            android:textColor="@color/white"
            android:textSize="15sp"

            />

        <Button
            android:id="@+id/relatve_layout_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:background="@drawable/background_circle_edit"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/camera"
            android:textColor="@color/white"
            android:textSize="15sp"
            />


    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>