<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/linearLayoutEditorContent"
    android:background="@color/backgroundTool"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:background="@color/backgroundTool"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@color/backgroundTool"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:minHeight="?actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:elevation="3dp"
            app:titleTextColor="@color/itemColorBlack"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/appBarLayout"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:id="@+id/linearLayoutShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="6dp"
                android:src="@drawable/ic_outline_share"
                app:tint="@color/itemColorBlack"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/levenim"
                android:layout_weight="1"
                android:text="@string/share_with_friends"
                android:textColor="@color/itemColorBlack"
                android:textSize="18sp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:background="@color/white"/>

         <LinearLayout
            android:id="@+id/linearLayoutApps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="7dp"
                android:src="@drawable/ic_baseline_apps"
                app:tint="@color/itemColorBlack"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/levenim"
                android:text="@string/more_apps_from_us"
                android:textColor="@color/itemColorBlack"
                android:textSize="18sp"/>

         </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:background="@color/white"/>

        <LinearLayout
            android:id="@+id/linearLayoutFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="6dp"
                android:src="@drawable/ic_outline_feedback"
                app:tint="@color/itemColorBlack"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/levenim"
                android:text="@string/feedback"
                android:textColor="@color/itemColorBlack"
                android:textSize="18sp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:background="@color/white"/>

        <LinearLayout
            android:id="@+id/linearLayoutPrivacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="6dp"
                android:src="@drawable/ic_outline_privacy"
                app:tint="@color/itemColorBlack"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/levenim"
                android:text="@string/privacy_policy"
                android:textColor="@color/itemColorBlack"
                android:textSize="18sp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:background="@color/white"/>

        <LinearLayout
            android:id="@+id/linearLayoutRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="6dp"
                android:src="@drawable/ic_outline_star_rate"
                app:tint="@color/itemColorBlack"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/levenim"
                android:text="@string/rate_us"
                android:textColor="@color/itemColorBlack"
                android:textSize="18sp"/>


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:background="@color/white"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/bannerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>