<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="#090909"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linear_layout_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="25dp">

                    <ImageView
                        android:id="@+id/imageViewBack"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:padding="8dp"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/ic_arrow_back"
                        app:tint="@color/itemColorBlack"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"/>

                    <ImageView
                        android:id="@+id/imageViewHome"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_round_home"
                        app:tint="@color/itemColorBlack"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>

                    <ImageView
                        android:id="@+id/image_view_preview"
                        android:layout_width="220dp"
                        android:layout_height="220dp"
                        android:scaleType="centerCrop"
                        android:layout_centerInParent="true"/>

                    <ImageView
                        android:id="@+id/image_view_open"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:padding="25dp"
                        android:clickable="false"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_baseline_search"
                        app:tint="@color/itemColorBlack"
                        android:layout_centerInParent="true"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_to"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/itemColorGray"/>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:scrollbars="none">

                    <LinearLayout
                        android:id="@+id/linearLayoutShareOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/linear_layout_share_more"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="15dp"
                            android:layout_marginStart="15dp"
                            android:onClick="onClick"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:src="@drawable/share"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/other"
                                android:fontFamily="@font/roboto_medium"
                                android:textColor="@color/itemColorBlack"
                                android:textSize="13sp"
                                android:singleLine="true"/>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linear_layout_facebook"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="15dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:onClick="onClick"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:src="@drawable/facebook"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/facebook"
                                android:fontFamily="@font/roboto_medium"
                                android:textColor="@color/itemColorBlack"
                                android:textSize="13sp"
                                android:singleLine="true"/>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linear_layout_instagram"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="15dp"
                            android:onClick="onClick"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:src="@drawable/instagram"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/instagram"
                                android:fontFamily="@font/roboto_medium"
                                android:textColor="@color/itemColorBlack"
                                android:textSize="13sp"
                                android:singleLine="true"/>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linear_layout_twitter"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="15dp"
                            android:onClick="onClick"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:src="@drawable/twitter"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/twitter"
                                android:fontFamily="@font/roboto_medium"
                                android:textColor="@color/itemColorBlack"
                                android:textSize="13sp"
                                android:singleLine="true"/>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linear_layout_whatsapp"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="15dp"
                            android:onClick="onClick"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:src="@drawable/whatsapp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/whatsapp"
                                android:fontFamily="@font/roboto_medium"
                                android:textColor="@color/itemColorBlack"
                                android:textSize="13sp"
                                android:singleLine="true"/>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linear_layout_messenger"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="15dp"
                            android:onClick="onClick"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:src="@drawable/messenger"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/messenger"
                                android:fontFamily="@font/roboto_medium"
                                android:textColor="@color/itemColorBlack"
                                android:textSize="13sp"
                                android:singleLine="true"/>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linear_layout_gmail"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="15dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:src="@drawable/gmail"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/gmail"
                                android:fontFamily="@font/roboto_medium"
                                android:textColor="@color/itemColor"
                                android:textSize="13sp"
                                android:singleLine="true"/>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linear_layout_wallpaper"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:src="@drawable/wallpaper"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/wallpaper"
                                android:fontFamily="@font/roboto_medium"
                                android:textColor="@color/itemColor"
                                android:textSize="13sp"
                                android:singleLine="true"/>

                        </LinearLayout>

                    </LinearLayout>

                </HorizontalScrollView>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="310dp"
                android:background="@drawable/border_view"
                android:backgroundTint="@color/black"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout_share">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/linearLayoutAds"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <FrameLayout
                            android:id="@+id/id_native_ad"
                            android:layout_width="match_parent"
                            android:layout_height="310dp"
                            android:orientation="vertical"
                            android:layout_gravity="bottom"/>

                    </LinearLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>